fix: Don't cut off network chip New tag (#186)
* fix: Don't cut off network chip New tag

* Add comment

* Revert shuffle changes

* chore: Bump version to v1.0.9

--- a/src/components/Wallet/NetworkChip/styles.module.css
+++ b/src/components/Wallet/NetworkChip/styles.module.css
@@ -11,8 +11,6 @@
 .icon img {
   display: flex;
   align-items: center;
-  height: 40px;
-  width: 40px;
 }
 
 .name {
